# binance-futures

./: .gitignore  ARCHITECTURE.CN.md  ARCHITECTURE.md  AXIS_FORMATTING_OPTIMIZATION.md  BAR_LENGTH_LIMIT_UPDATE.md  BAR_LENGTH_X_AXIS_LIMIT.md  CANONICAL_PROVIDER_NAMES.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONFIGURATION_NAMING_STANDARDS.md  CONFIG_SYMBOLS_EXAMPLE.md  CONFIG_SYSTEM.md  CPU_AFFINITY_IMPLEMENTATION_SUMMARY.md  CPU_AFFINITY_README.md  Cargo.toml  FLOWSIGHT_LAYOUT_UPDATE.md  GUI_OPTIMIZATION_SUMMARY.md  GZIP_PROVIDER_ANALYSIS_REPORT.md  LICENSE  LOGIC_AGENT_USAGE.md  LOGO_SETUP_COMPLETE.md  OPTIMIZED_USAGE.md  ORDERBOOK_CENTERING_FIX.md  ORDERBOOK_CLEANUP_FIX.md  PRD-2025-07-07.md  PRD.CN.md  PRD.md  PRICE_CHART_IMPLEMENTATION.md  PRICE_TRACKING_GUIDE.md  PROVIDER_MAPPINGS.md  README.md  REQUIRE-20250808.md  TIME_FOOTPRINT_FEATURE.md  UI_RESTORATION_SUMMARY.md  VOLUME_BAR_CHART.md  WINDOWS_GUI_SOLUTIONS.md  Y_AXIS_5_DOLLAR_SPACING.md  binance_futures_strategy.py  check_errors.bat  (+25 more)
.claude/: settings.local.json
benches/: ring_buffer_benchmark.rs
configs/providers/: alpaca_market.toml  binance_market_provider.toml  binance_rest.toml  gzip_historical_provider.toml  mock.toml
docs/: BASIC_LAYER_IMPLEMENTATION.md  BITFINEX_IMPLEMENTATION_SUMMARY.md  BITFINEX_WEBSOCKET.md  BITGET_IMPLEMENTATION_SUMMARY.md  BITGET_WEBSOCKET.md  COINBASE_IMPLEMENTATION_SUMMARY.md  COINBASE_WEBSOCKET.md  CONFIGURATION.md  EVENT_DRIVEN_ARCHITECTURE_SPEC.md  GATEIO_IMPLEMENTATION_SUMMARY.md  GATEIO_WEBSOCKET.md  GPU_RENDERING.md  GUI_REFACTOR_SPEC.md  INSTALLATION.md  LOCK_FREE_MULTI_THREADING.md  LOCK_FREE_REMOVAL_SUMMARY.md  MESSAGE_TYPE_DETECTION_IMPLEMENTATION.md  MEXC_IMPLEMENTATION_SUMMARY.md  MEXC_WEBSOCKET.md  MULTI_EXCHANGE_MANAGER.md  README.md  USER_GUIDE.md  orderbook_imbalance_feature.md  tick_pressure_feature.md
examples/: README.md  basic_layer_test.rs  bitfinex_test.rs  bitget_test.rs  bybit_test.rs  coinbase_test.rs  config_usage.rs  gateio_improved_test.rs  lock_free_threaded_multi_exchange_test.rs  mexc_test.rs  multi_exchange_test.rs  okx_test.rs  price_chart_height_config.rs  provider_system_demo.rs  ratatui_bar_chart_demo.rs  ratatui_volume_bar_test.rs  refactored_provider_demo.rs  show_provider_mappings.rs  test_audio.rs  test_buttons.rs  test_cpu_affinity.rs  test_gzip_provider.rs  test_new_provider_architecture.rs  test_no_audio.rs  test_volume_bar_fix.rs  test_volume_profile_fixes.rs  volume_bar_chart_demo.rs  volume_bar_chart_test.rs  volume_bar_debug.rs
flowsight-web/: README.md  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
prototype/: deepseek.py  footprint-binance-spot.py  footprint.py  future-orderbook.py  future_save_trades.py
prototype/analysis/: AOI_README.md  connect_mongodb.py  task1_AOI.py  task1_AOI_demo.py  test_query_performance.py
scripts/: create_sample_audio.py
src/: event.rs  lib.rs  main.backup.txt  main.rs  main_gui_test.rs  orderbook.rs  ringbuffer.rs  signal.rs  startup_flow.rs
src/app/: mod.rs  reactive_app.rs  ui.rs
src/audio/: README.md  mod.rs  player.rs
src/config/: consistency_checker.rs  mod.rs  provider_config.rs  provider_identity.rs  provider_mapping.rs  startup_validator.rs  system_config.rs
src/core/: adaptive_ring_buffer.rs  basic_layer.rs  cache_optimized_ring_buffer.rs  cpu_affinity.rs  lock_free_ring_buffer.rs  mod.rs  performance_config.rs  ring_buffer.rs
src/events/: dispatcher.rs  event_bus.rs  mod.rs  (+3 more)
tests/: incremental_depth_test.rs  integration_test.rs  momentum_test.rs  orderbook_cleanup_test.rs  performance_test.rs  price_chart_test.rs  rv_volatility_test.rs  test_core.rs
(+148 files in other folders)
