[package]
name = "binance-futures"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
core_affinity = "0.8"
# Terminal UI dependencies removed - replaced with egui
# crossterm = "0.28"
# ratatui = "0.29"
# egui dependencies for native desktop GUI - simplified version
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend.
] }
egui_extras = { version = "0.27", features = ["image"] }
image = "0.24"
ordered-float = "4.5"
env_logger = "0.11"
serde_json = "1.0"
log = "0.4"
lazy_static = "1.4"
rand = "0.8"


tokio = { version = "1.0", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }