[package]
name = "flow_sight"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
core_affinity = "0.8"
# GUI dependencies - Tauri based
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "4.5"
env_logger = "0.11"
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
rodio = "0.17"
tokio = { version = "1.0", features = ["full"], optional = true }

# egui dependencies with GPU rendering support
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use wgpu rendering backend for GPU acceleration
] }
egui_extras = { version = "0.27", features = ["image"] }
egui_plot = "0.27"
image = "0.24"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]