[package]
name = "flow_sight"
version = "0.1.0"
edition = "2021"
default-run = "flow_sight"

[[bin]]
name = "flow_sight_simple"
path = "src/main_simple.rs"
required-features = ["gui"]

[dependencies]
once_cell = "1.19"
tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2.5"
core_affinity = "0.8"
# GUI dependencies - eframe based
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "4.5"
env_logger = "0.11"
log = "0.4"
lazy_static = "1.4"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4"] }

# egui dependencies with GPU rendering support
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use wgpu rendering backend for GPU acceleration
    "x11",           # Enable X11 support for WSL2
    "wayland",       # Enable Wayland support for WSL2
], optional = true }
egui_extras = { version = "0.27", features = ["image"], optional = true }
egui_plot = { version = "0.27", optional = true }
image = { version = "0.24", optional = true }

# No build dependencies needed for eframe

[features]
default = []
gui = ["egui", "eframe", "egui_extras", "egui_plot", "image"]
# custom-protocol feature removed since we're not using Tauri

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ring_buffer_benchmark"
harness = false